--- a/Tutorial-gae-dm/war/Tutorial_gae_dm.html
+++ b/Tutorial-gae-dm/war/Tutorial_gae_dm.html
@@ -48,14 +48,15 @@
 
     <table align="center">
       <tr>
-        <td colspan="2" style="font-weight:bold;">Please enter your name:</td>        
+        <td colspan="3" style="font-weight:bold;">Please enter your name:</td>        
       </tr>
       <tr>
-        <td id="nameFieldContainer"></td>
-        <td id="sendButtonContainer"></td>
+      	<td id="googleCloudSQL"></td>
+        <td id="weka"></td>
+        <td id="googlePredictionAPI"></td>
       </tr>
       <tr>
-        <td colspan="2" style="color:red;" id="errorLabelContainer"></td>
+        <td colspan="3" style="color:red;" id="errorLabelContainer"></td>
       </tr>
     </table>
   </body>
