--- a/Tutorial-gae-dm/war/Tutorial_gae_dm.html
+++ b/Tutorial-gae-dm/war/Tutorial_gae_dm.html
@@ -59,5 +59,6 @@
         <td colspan="3" style="color:red;" id="errorLabelContainer"></td>
       </tr>
     </table>
+    <div id="content"></div>
   </body>
 </html>
