--- a/trunk/Tutorial-gae-dm/war/Tutorial_gae_dm.html
+++ b/trunk/Tutorial-gae-dm/war/Tutorial_gae_dm.html
@@ -48,15 +48,10 @@
 
     <table align="center">
       <tr>
-        <td colspan="3" style="font-weight:bold;">Please enter your name:</td>        
+      	<td id="tab"></td>
       </tr>
       <tr>
-      	<td id="googleCloudSQL"></td>
-        <td id="weka"></td>
-        <td id="googlePredictionAPI"></td>
-      </tr>
-      <tr>
-        <td colspan="3" style="color:red;" id="errorLabelContainer"></td>
+        <td style="color:red;" id="errorLabelContainer"></td>
       </tr>
     </table>
     <div id="content"></div>
