--- a/trunk/Tutorial-gae-dm/war/Tutorial_gae_dm.html
+++ b/trunk/Tutorial-gae-dm/war/Tutorial_gae_dm.html
@@ -50,10 +50,7 @@
       <tr>
       	<td id="tab"></td>
       </tr>
-      <tr>
-        <td style="color:red;" id="errorLabelContainer"></td>
-      </tr>
     </table>
-    <div id="content"></div>
+    <div id="content" align="center"></div>
   </body>
 </html>
